--- a/app/blog.html
+++ b/app/blog.html
@@ -292,6 +292,7 @@
               <p class="arrow-btn__text">Подробнее</p></a></div>
         </div>
       </div>
+      <div class="container pagination"><a class="prev page-numbers" href="#">←Ранее</a><a class="page-numbers" href="#">1</a><span class="page-numbers current" aria-current="page">2</span><a class="page-numbers" href="#">3</a><a class="page-numbers" href="#">4</a><span class="page-numbers dots">…</span><a class="page-numbers" href="#">6</a><a class="next page-numbers" href="#">Далее→</a></div>
     </section>
     <!--CONTENT END-->
     <!--FOOTER START-->
